# susvibes

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
datasets/examples/: sample_predictions.json
datasets/examples/aio-libs__aiohttp-session_1b356f01bbab57d041c9a75bacd72fbbf8524728/: golden.md  mask.md  meta_info.md  problem_statement.md  security_fix.md
datasets/examples/buildbot__buildbot_e781f110933e05ecdb30abc64327a2c7c9ff9c5a/: golden.md  mask.md  meta_info.md  problem_statement.md  security_fix.md
datasets/examples/django__django_07cefdee4a9d1fcd9a3a631cbd07c78defd1923b/: golden.md  mask.md  meta_info.md  problem_statement.md  security_fix.md
datasets/examples/psf__requests_74ea7cf7a6a27a4eeb2ae24e162bcc942a6706d5/: golden.md  mask.md  meta_info.md  problem_statement.md  security_fix.md
datasets/examples/wagtail__wagtail_5c7a60977cba478f6a35390ba98cffc2bd41c8a4/: golden.md  mask.md  meta_info.md  problem_statement.md  security_fix.md
evaluation_harness/: kimi_cli_tutorial.md
evaluation_harness/claude_code/: .env.sample  README.md  batch_run_docker.py  parallel_batch_run.py  prompts.py  run_docker.py  setup-env.sh
src/: constants.py  env.py  run_evaluation.py  tasks.py
src/curate/: README.md  agents.py  mask.py  pipeline.py  problem_gen.py  utils.py  verifier.py
src/curate/collect/: crawl.py  process.py  utils.py
src/curate/env_setup/: build_dataset.py  create_env.py  dev_tools.py  logs_parser.py
src/env_specs/: __init__.py  components.json  constants.py
src/safety_strategies/: prompts.py  tools.py
susvibes/: constants.py  env.py  run_evaluation.py  tasks.py
susvibes/curate/: agents.py  mask.py  pipeline.py  problem_gen.py  prompts.py  run_agents.sh  utils.py  verifier.py
susvibes/curate/collect/: crawl.py  process.py
susvibes/curate/env_setup/: build_dataset.py  create_env.py  dev_tools.py  logs_parser.py
susvibes/env_specs/: __init__.py  dev_tools.json  dockerfiles.py
susvibes/safety_strategies/: cwes.yaml  tools.py
